tests/workflows/tests/snapshots/upgrade__upgrade_major_dry_run_envelope.snap
---
source: tests/workflows/tests/upgrade.rs
expression: json
---
{
  "success": true,
  "dry_run": true,
  "upgraded": 1,
  "packages": [
    {
      "name": "@lpm.dev/acme.widget",
      "from": "1.2.0",
      "to": "2.0.0",
      "new_range": "^2.0.0",
      "is_dev": false,
      "semver_class": "major",
      "has_install_scripts": false,
      "peer_impact": {
        "ok": true,
        "basis": "current_lockfile"
      },
      "patch_invalidation": null
    }
  ],
  "fetch_errors": 0
}
